add: AnimeDetailViewModelTest